Fix: Actualizar Node.js a versión 20 para Next.js

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,13 @@
-# frontend/Dockerfile
-FROM node:18-alpine
-
+FROM node:20-alpine
 WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm install
-
 COPY . .
 
-# Argumentos de construcción (Necesarios para que Next.js hornee la URL de la API)
+# Argumento para la URL de la API
 ARG NEXT_PUBLIC_API_URL
 ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
 
 RUN npm run build
-
 EXPOSE 3000
 CMD ["npm", "start"]
